Fix visibility helper classes for prettyblocks

--- a/views/css/everblock.css
+++ b/views/css/everblock.css
@@ -15,6 +15,23 @@
  *  @copyright 2019-2025 Team Ever
  *  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+/* Visibility helpers */
+.everblock-visibility-none {
+    display: none !important;
+}
+
+@media (min-width: 992px) {
+    .everblock-visibility-mobile {
+        display: none !important;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .everblock-visibility-desktop {
+        display: none !important;
+    }
+}
+
 /* Obfuscation */
 .obfme,
 .obfme img {
